--- a/package.json
+++ b/package.json
@@ -1,23 +1,6 @@
 {
-  "name": "echoroom",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react/jsx-runtime": "^19.1.0",
-    "@google/genai": "^1.4.0",
-    "openai": "^4.52.7"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "typescript": "~5.7.2",
-    "vite": "^6.2.0"
+    "node-fetch": "^3.3.2",
+    "openai": "^5.3.0"
   }
 }
