--- a/package.json
+++ b/package.json
@@ -1,25 +1,8 @@
 {
-  "name": "ehoroom-creative",
+  "name": "echoroom-creative-app",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react/jsx-runtime": "^19.1.0",
-    "@google/genai": "0.15.0",
-    "zod": "^3.23.0",
-    "framer-motion": "^12.18.0",
-    "react-dropzone": "^14.3.8"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "typescript": "~5.7.2",
-    "vite": "^6.2.0"
+    "build": "node create-env-config.js"
   }
 }
